--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -1,6 +1,10 @@
 @import 'reset';
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
 
+body {
+  overflow: hidden;
+}
+
 .pane-leave-active,
 .pane-enter-active {
   &::after {
